--- a/portfolio.html
+++ b/portfolio.html
@@ -25,8 +25,19 @@
           </ul>      
         </nav>
         <ul class="out-nav list">
-          <li class="out-nav-item"><a href="mailto:info@devstudio.com" class="out-link link">info@devstudio.com</a></li>
-          <li class="out-nav-item"><a href="tel:+380961111111" class="out-link link">+38 096 111 11 11</a></li>
+          <li class="out-nav-item">
+            <a href="mailto:info@devstudio.com" class="out-link link">
+              <svg class="out-nav-icon" width="16" height="12">
+               <use href="./img/icons.svg#icon-envelope" ></use>
+              </svg>
+              info@devstudio.com</a>
+          </li>
+          <li class="out-nav-item">
+            <a href="tel:+380961111111" class="out-link link">
+              <svg class="out-nav-icon" width="10" height="16">
+               <use href="./img/icons.svg#icon-smartphone" ></use>
+              </svg>
+              +38 096 111 11 11</a></li>
         </ul>
       </div>
     </header>
@@ -44,82 +55,135 @@
           </ul>
           <ul class="portfolio-list list">
               <li class="portfolio-item">
+                <a href="#" class="link">
                   <img src="./img/portfolio/img-1.jpg" alt="Ноутбук с открытым сайтом" width="370" height="294">
                   <div class="portfolio-text">
                     <h2 class="portfolio-title" >Технокряк</h2>
                     <p class="portfolio-descr">Веб-сайт</p>
                   </div>
+                </a>
               </li>
               <li class="portfolio-item">
+                <a href="#" class="link">
                   <img src="./img/portfolio/img-2.jpg" alt="Два баскетболиста" width="370" height="294">
                   <div class="portfolio-text">
                     <h2 class="portfolio-title" >Постер New Orlean vs Golden Star</h2>
                     <p class="portfolio-descr">Дизайн</p>
                   </div>
+                </a>
               </li>
               <li class="portfolio-item">
+                <a href="#" class="link">
                   <img src="./img/portfolio/img-3.jpg" alt="Логотип ресторана Seafood" width="370" height="294">
                   <div class="portfolio-text">
                     <h2 class="portfolio-title" >Ресторан Seafood</h2>
                     <p class="portfolio-descr">Приложение</p>
                   </div>
+                </a>
               </li>
               <li class="portfolio-item">
-                  <img src="./img/portfolio/img-4.jpg" alt="Наушники" width="370" height="294">
+                <a href="#" class="link">
+                   <img src="./img/portfolio/img-4.jpg" alt="Наушники" width="370" height="294">
                   <div class="portfolio-text">
                     <h2 class="portfolio-title" >Проект Prime</h2>
                     <p class="portfolio-descr">Маркетинг</p>
                   </div>
+                </a>
               </li>
               <li class="portfolio-item">
+                <a href="#" class="link">
                   <img src="./img/portfolio/img-5.jpg" alt="Коробки с товаром" width="370" height="294">
                   <div class="portfolio-text">
                     <h2 class="portfolio-title" >Проект Boxes</h2>
                     <p class="portfolio-descr">Приложение</p>
                   </div>
+                </a>
               </li>
               <li class="portfolio-item">
+                <a href="#" class="link">
                   <img src="./img/portfolio/img-6.jpg" alt="Монитор компьютера с открытым веб-сайтом" width="370" height="294">
                   <div class="portfolio-text">
                     <h2 lang="en" class="portfolio-title" >Inspiration has no Borders</h2>
                     <p class="portfolio-descr">Веб-сайт</p>
                   </div>
+                </a>
               </li>
               <li class="portfolio-item">
+                <a href="#" class="link">
                   <img src="./img/portfolio/img-7.jpg" alt="Открытая книга" width="370" height="294">
                   <div class="portfolio-text">
                     <h2 class="portfolio-title" >Издание Limited Edition</h2>
                     <p class="portfolio-descr">Дизайн</p>
                   </div>
+                </a>
               </li>
               <li class="portfolio-item">
+                <a href="#" class="link">
                   <img src="./img/portfolio/img-8.jpg" alt="Бирка с логотипом фирмы производителя" width="370" height="294">
                   <div class="portfolio-text">
                     <h2 class="portfolio-title" >Проект LAB</h2>
                     <p class="portfolio-descr">Маркетинг</p>
                   </div>
+                </a>
               </li>
               <li class="portfolio-item">
+                <a href="#" class="link">
                   <img src="./img/portfolio/img-9.jpg" alt="Выполнения действий в приложении на ноутбуке" width="370" height="294">
                   <div class="portfolio-text">
                     <h2 class="portfolio-title" lang="en">Growing Business</h2>
                     <p class="portfolio-descr">Приложение</p>
                   </div>
+                </a>
               </li>
           </ul>
         </div>
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="logo"> Web<span class="footer-text">Studio</span></a>
-        <address>
-          <ul class="addres list">
-            <li class="addres-item"><a href="https://goo.gl/maps/YC8JhcxrnrDwgEbE9" target="_blank" rel="noopener nofollow noreferrer" class="addres-link">г. Киев, пр-т Леси Украинки, 26</a></li>
-            <li class="addres-item"><a href="mailto:info@example.com" class="link">info@example.com</a></li>
-            <li class="addres-item"><a href="tel:+380991111111" class="link">+38 099 111 11 11</a></li>
+      <div class="container about-container">
+        <div>
+          <a href="./index.html" class="logo"> Web<span class="footer-text">Studio</span></a>
+          <address>
+            <ul class="addres list">
+              <li class="addres-item"><a href="https://goo.gl/maps/YC8JhcxrnrDwgEbE9" target="_blank" rel="noopener nofollow noreferrer" class="addres-link">г. Киев, пр-т Леси Украинки, 26</a></li>
+              <li class="addres-item"><a href="mailto:info@example.com" class="link">info@example.com</a></li>
+              <li class="addres-item"><a href="tel:+380991111111" class="link">+38 099 111 11 11</a></li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-social">
+          <h3 class="social-title">Присоединяйтесь</h3>
+          <ul class="social-list list">
+            <li class="social-item">
+              <a href="#" class="social-link link">
+                <svg class="social-icon">
+                  <use href="./img/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="#" class="social-link link">
+                <svg class="social-icon">
+                  <use href="./img/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="#" class="social-link link">
+                <svg class="social-icon">
+                  <use href="./img/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="#" class="social-link link">
+                <svg class="social-icon">
+                  <use href="./img/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
 
