--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
           </ul>
           <ul class="portfolio-list list">
               <li class="portfolio-item">
-                <a href="#" class="link">
+                <a href="#" class="portfolio-link link">
                   <img src="./img/portfolio/img-1.jpg" alt="Ноутбук с открытым сайтом" width="370" height="294">
                   <div class="portfolio-text">
                     <h2 class="portfolio-title" >Технокряк</h2>
@@ -64,7 +64,7 @@
                 </a>
               </li>
               <li class="portfolio-item">
-                <a href="#" class="link">
+                <a href="#" class="portfolio-link link">
                   <img src="./img/portfolio/img-2.jpg" alt="Два баскетболиста" width="370" height="294">
                   <div class="portfolio-text">
                     <h2 class="portfolio-title" >Постер New Orlean vs Golden Star</h2>
@@ -73,7 +73,7 @@
                 </a>
               </li>
               <li class="portfolio-item">
-                <a href="#" class="link">
+                <a href="#" class="portfolio-link link">
                   <img src="./img/portfolio/img-3.jpg" alt="Логотип ресторана Seafood" width="370" height="294">
                   <div class="portfolio-text">
                     <h2 class="portfolio-title" >Ресторан Seafood</h2>
@@ -82,7 +82,7 @@
                 </a>
               </li>
               <li class="portfolio-item">
-                <a href="#" class="link">
+                <a href="#" class="portfolio-link link">
                    <img src="./img/portfolio/img-4.jpg" alt="Наушники" width="370" height="294">
                   <div class="portfolio-text">
                     <h2 class="portfolio-title" >Проект Prime</h2>
@@ -91,7 +91,7 @@
                 </a>
               </li>
               <li class="portfolio-item">
-                <a href="#" class="link">
+                <a href="#" class="portfolio-link link">
                   <img src="./img/portfolio/img-5.jpg" alt="Коробки с товаром" width="370" height="294">
                   <div class="portfolio-text">
                     <h2 class="portfolio-title" >Проект Boxes</h2>
@@ -100,7 +100,7 @@
                 </a>
               </li>
               <li class="portfolio-item">
-                <a href="#" class="link">
+                <a href="#" class="portfolio-link link">
                   <img src="./img/portfolio/img-6.jpg" alt="Монитор компьютера с открытым веб-сайтом" width="370" height="294">
                   <div class="portfolio-text">
                     <h2 lang="en" class="portfolio-title" >Inspiration has no Borders</h2>
@@ -109,7 +109,7 @@
                 </a>
               </li>
               <li class="portfolio-item">
-                <a href="#" class="link">
+                <a href="#" class="portfolio-link link">
                   <img src="./img/portfolio/img-7.jpg" alt="Открытая книга" width="370" height="294">
                   <div class="portfolio-text">
                     <h2 class="portfolio-title" >Издание Limited Edition</h2>
@@ -118,7 +118,7 @@
                 </a>
               </li>
               <li class="portfolio-item">
-                <a href="#" class="link">
+                <a href="#" class="portfolio-link link">
                   <img src="./img/portfolio/img-8.jpg" alt="Бирка с логотипом фирмы производителя" width="370" height="294">
                   <div class="portfolio-text">
                     <h2 class="portfolio-title" >Проект LAB</h2>
@@ -127,7 +127,7 @@
                 </a>
               </li>
               <li class="portfolio-item">
-                <a href="#" class="link">
+                <a href="#" class="portfolio-link link">
                   <img src="./img/portfolio/img-9.jpg" alt="Выполнения действий в приложении на ноутбуке" width="370" height="294">
                   <div class="portfolio-text">
                     <h2 class="portfolio-title" lang="en">Growing Business</h2>
