Внес последние правки

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
           </address>
         </div>
         <div class="footer-social">
-          <h3 class="social-title">Присоединяйтесь</h3>
+          <p class="social-title">Присоединяйтесь</p>
           <ul class="social-list list">
             <li class="social-item">
               <a href="#" class="social-link link">
